# besserlesenschreiben/backend/openapi.json
@@ -105,15 +105,11 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "token": {
-                      "type": "string"
-                    },
                     "isNewAccount": {
                       "type": "boolean"
                     }
                   },
                   "required": [
-                    "token",
                     "isNewAccount"
                   ],
                   "additionalProperties": false
@@ -703,6 +699,10 @@
                 "type": "object",
                 "properties": {
                   "pin": {
+                    "type": "string",
+                    "pattern": "^\\d{4}$"
+                  },
+                  "currentPin": {
                     "type": "string",
                     "pattern": "^\\d{4}$"
                   }
